--- a/app/design/frontend/foundation/default/template/customer/form/resetforgottenpassword.phtml
+++ b/app/design/frontend/foundation/default/template/customer/form/resetforgottenpassword.phtml
@@ -28,6 +28,59 @@
             <small class="form-error"><?php echo $this->__('Please make sure your passwords match.') ?></small>
         </label>
     </div>
+    <script>
+        jQuery('#password').focus(function () {
+            jQuery('#toolTipPasswordStrength').css("display", "inline");
+        });
+        jQuery('#password').blur(function () {
+            jQuery('#toolTipPasswordStrength').css("display", "none");
+        });
+
+        var options = {};
+        options.ui = {
+            container: "#toolTipPasswordStrength",
+            viewports: {
+                progress: "#passwordStrengthBar",
+                verdict: ".progress-meter-text",
+                errors: "#passwordStrengthHeadLine"
+            },
+            errorMessages: {
+                wordLength: "Ihr Passwort ist zu kurz",
+                wordNotEmail: "Keine Email",
+                wordSimilarToUsername: "Kein Benutzername",
+                wordTwoCharacterClasses: "Keine gleichen Wortgruppen",
+                wordRepetitions: "Zu viele Wiederholungen",
+                wordSequences: "Ihr Passwort enthält Sequenzen"
+            },
+            verdicts: ["zu kurz", "schwach", "gut", "stark", "sehr stark"],
+            showVerdictsInsideProgressBar: true,
+            scores: [16, 26, 38, 45],
+            showErrors: true,
+        };
+        options.rules = {
+            activated: {
+                wordNotEmail: true,
+                wordLength: true,
+                wordSimilarToUsername: true,
+                wordSequences: true,
+                wordTwoCharacterClasses: true,
+                wordRepetitions: true,
+                wordLowercase: true,
+                wordUppercase: true,
+                wordOneNumber: true,
+                wordThreeNumbers: true,
+                wordOneSpecialChar: true,
+                wordTwoSpecialChar: true,
+                wordUpperLowerCombo: true,
+                wordLetterNumberCombo: true,
+                wordLetterNumberCharCombo: true
+            }
+        };
+        options.common = {
+            minChar: 8
+        };
+        jQuery('#password').pwstrength(options);
+    </script>
     <button type="submit" title="<?php echo Mage::helper('core')->quoteEscape($this->__('Reset a Password')); ?>"
             class="button"><?php echo $this->__('Reset a Password'); ?></button>
 </form>
