--- a/app/design/frontend/foundation/default/template/page/2columns-right.phtml
+++ b/app/design/frontend/foundation/default/template/page/2columns-right.phtml
@@ -16,7 +16,7 @@
             <div class="off-canvas-content" data-off-canvas-content>
                 <?php echo $this->getChildHtml('breadcrumbs') ?>
                 <div class="main-container col2-right-layout">
-                    <div class="col-main">
+                    <div id="main" class="col-main">
                         <?php echo $this->getChildHtml('global_messages') ?>
                         <?php echo $this->getChildHtml('content') ?>
                     </div>
