--- a/app/design/frontend/foundation/default/template/page/2columns-top.phtml
+++ b/app/design/frontend/foundation/default/template/page/2columns-top.phtml
@@ -17,7 +17,7 @@
                 <?php echo $this->getChildHtml('breadcrumbs') ?>
                 <div class="main-container col1-layout">
                     <div class="col-top"><?php echo $this->getChildHtml('left') ?></div>
-                    <div class="col-main">
+                    <div id="main" class="col-main">
                         <?php echo $this->getChildHtml('global_messages') ?>
                         <?php echo $this->getChildHtml('content') ?>
                     </div>
