--- a/skin/frontend/foundation/default/src/assets/scss/custom/_owl.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_owl.scss
@@ -22,7 +22,7 @@ $owl-nav-disabled-opacity: 0.5 !default;
 
 $owl-dot-width: 10px !default;
 $owl-dot-height: 10px !default;
-$owl-dot-rounded: 30px !default;
+$dot-rounded: 30px !default;
 $owl-dot-margin: 5px 7px !default;
 $owl-dot-background: $owl-color-gray !default;
 $owl-dot-background-active: $primary-color !default;
