--- a/app/design/frontend/foundation/default/template/catalog/navigation/topcategory.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/navigation/topcategory.phtml
@@ -7,12 +7,12 @@ $_categories = $this->getCurrentChildCategories(); ?>
             <?php $_category = Mage::getModel("catalog/category")->load($_category->getEntityId()); ?>
             <li data-equalizer-watch>
                 <div class="category-image">
-                    <?php if ($_category->getImageUrl()) : ?>
                     <a href="<?php echo $_category->getURL() ?>"
                        title="<?php echo $this->htmlEscape($_category->getName()) ?>">
-                            <img data-interchange="[<?php echo $_category->getCategoryImage(125,125) ?>, small], [<?php echo $_category->getCategoryImage(180,180) ?>, medium], [<?php echo $_category->getCategoryImage(250,250) ?>, large]" alt="<?php echo $this->htmlEscape($_category->getName()) ?>"/>
+                        <?php if ($_imageUrl = $_category->getImageUrl()) : ?>
+                            <img src="<?php echo $_imageUrl; ?>" alt="<?php echo $this->htmlEscape($_category->getName()) ?>"/>
+                        <?php endif; ?>
                     </a>
-                    <?php endif; ?>
                     <div class="category-name">
                         <a href="<?php echo $_category->getURL() ?>"
                            title="<?php echo $this->htmlEscape($_category->getName()) ?>"><?php echo $this->htmlEscape($_category->getName()) ?></a>
