--- a/app/design/frontend/foundation/default/template/catalog/navigation/topcategory.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/navigation/topcategory.phtml
@@ -5,12 +5,12 @@ $_categories = $this->getCurrentChildCategories(); ?>
     <?php foreach ($_categories as $_category): ?>
         <?php if ($_category->getIsActive()): ?>
             <?php $_category = Mage::getModel("catalog/category")->load($_category->getEntityId()); ?>
-            <li data-equalizer-watch>
+            <li class="item" data-equalizer-watch>
                 <div class="category-image">
                     <?php if ($_category->getImageUrl()) : ?>
                     <a href="<?php echo $_category->getURL() ?>"
                        title="<?php echo $this->htmlEscape($_category->getName()) ?>">
-                            <img data-interchange="[<?php echo $_category->getCategoryImage(125,125) ?>, small], [<?php echo $_category->getCategoryImage(180,180) ?>, medium], [<?php echo $_category->getCategoryImage(250,250) ?>, large]" alt="<?php echo $this->htmlEscape($_category->getName()) ?>"/>
+                            <img data-interchange="[<?php echo $_category->getCategoryImage(125,125) ?>, small], [<?php echo $_category->getCategoryImage(180,180) ?>, medium], [<?php echo $_category->getCategoryImage(200,200) ?>, large]" alt="<?php echo $this->htmlEscape($_category->getName()) ?>"/>
                     </a>
                     <?php endif; ?>
                     <div class="category-name">
@@ -23,3 +23,8 @@ $_categories = $this->getCurrentChildCategories(); ?>
         <?php $i++; ?>
     <?php endforeach; ?>
 </ul>
+<script type="text/javascript">
+    jQuery('.item').on("click", function () {
+        location.href = jQuery(this).find('a').attr('href');
+    });
+</script>
